syntax = "proto3";

import "google/protobuf/any.proto";

option go_package="./;proto";

message CommonResponse {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}
